<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        android:elevation="@dimen/toolbar_elevation">

        <ImageView
            android:id="@+id/imgGoBack"
            style="@style/defaultImage"
            android:layout_width="@dimen/toolbar_icon_size"
            android:layout_height="@dimen/toolbar_icon_size"
            android:layout_marginEnd="@dimen/toolbar_icon_margin"
            android:contentDescription="@string/cdes_goBackButton"
            app:srcCompat="@drawable/back_arrow"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="58dp" />

        <TextView
            android:id="@+id/txvFrameTitle"
            style="@style/titleText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="clip_horizontal"
            android:text="@string/mnu_titleProfile" />

        <ImageView
            android:id="@+id/imgEditUser"
            style="@style/defaultImage"
            android:layout_width="@dimen/icon_small_size"
            android:layout_height="@dimen/icon_small_size"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/icon_margin_right"
            android:contentDescription="@string/cdes_EditForm"
            app:srcCompat="@drawable/img_pencil_edit"
            tools:layout_editor_absoluteX="58dp"
            tools:layout_editor_absoluteY="58dp" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".appFragments.HomeFragment">

            <View
                android:id="@+id/UserView"
                style="@style/defaultView"
                android:layout_height="250dp"
                android:layout_marginTop="30dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgUserProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/cdes_profileImage"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="@+id/UserView"
                app:layout_constraintStart_toStartOf="@+id/UserView"
                app:layout_constraintTop_toTopOf="@+id/UserView"
                app:srcCompat="@drawable/img_default_user_image" />

            <ImageView
                android:id="@+id/imgEditProfileImage"
                style="@style/defaultImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_profile_image"
                android:contentDescription="@string/cdes_editProfileImage"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/imgUserProfile"
                app:layout_constraintEnd_toEndOf="@+id/imgUserProfile"
                app:srcCompat="@drawable/img_pencil_edit" />

            <TextView
                android:id="@+id/txvUserName"
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accountUserName"
                app:layout_constraintBottom_toBottomOf="@+id/UserView"
                app:layout_constraintEnd_toEndOf="@+id/UserView"
                app:layout_constraintStart_toStartOf="@+id/UserView"
                app:layout_constraintTop_toBottomOf="@+id/imgUserProfile"
                app:layout_constraintVertical_bias="0.35000002" />

            <View
                android:id="@+id/accountSettingsView"
                style="@style/defaultView"
                android:layout_height="410dp"
                android:layout_marginTop="15dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/UserView" />

            <TextView
                android:id="@+id/txvAccountSettingsTitle"
                style="@style/sectionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txv_settingsTitle"
                app:layout_constraintBottom_toBottomOf="@+id/imgProfileView"
                app:layout_constraintEnd_toEndOf="@+id/accountSettingsView"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toEndOf="@+id/imgProfileView"
                app:layout_constraintTop_toTopOf="@+id/imgProfileView" />

            <ImageView
                android:id="@+id/imgProfileView"
                style="@style/defaultImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@+id/accountSettingsView"
                app:layout_constraintTop_toTopOf="@+id/accountSettingsView"
                app:srcCompat="@drawable/img_app_settings" />

            <TextView
                android:id="@+id/txvUserProperty"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/edt_user"
                app:layout_constraintStart_toStartOf="@+id/accountSettingsView"
                app:layout_constraintTop_toBottomOf="@+id/txvAccountSettingsTitle" />

            <EditText
                android:id="@+id/edtUserProperty"
                style="@style/propertyEditText"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/accountUserName"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/accountSettingsView"
                app:layout_constraintStart_toStartOf="@+id/accountSettingsView"
                app:layout_constraintTop_toBottomOf="@+id/txvUserProperty" />

            <TextView
                android:id="@+id/txvNameProperty"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/edt_name"
                app:layout_constraintStart_toStartOf="@+id/accountSettingsView"
                app:layout_constraintTop_toBottomOf="@+id/edtUserProperty" />

            <EditText
                android:id="@+id/edtNameProperty"
                style="@style/propertyEditText"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/accountName"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/accountSettingsView"
                app:layout_constraintStart_toStartOf="@+id/accountSettingsView"
                app:layout_constraintTop_toBottomOf="@+id/txvNameProperty" />

            <TextView
                android:id="@+id/txvMailProperty"
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/edt_email"
                app:layout_constraintStart_toStartOf="@+id/accountSettingsView"
                app:layout_constraintTop_toBottomOf="@+id/edtNameProperty" />

            <EditText
                android:id="@+id/edtMailProperty"
                style="@style/propertyEditText"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/accountMail"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="@+id/accountSettingsView"
                app:layout_constraintStart_toStartOf="@+id/accountSettingsView"
                app:layout_constraintTop_toBottomOf="@+id/txvMailProperty" />


            <View
                android:id="@+id/logOutView"
                style="@style/defaultView"
                android:layout_height="180dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accountSettingsView" />

            <TextView
                android:id="@+id/txvLogOut"
                style="@style/sectionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txv_logOut"
                app:layout_constraintBottom_toBottomOf="@+id/imgLogOut"
                app:layout_constraintEnd_toEndOf="@+id/logOutView"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toEndOf="@+id/imgLogOut"
                app:layout_constraintTop_toTopOf="@+id/imgLogOut" />

            <ImageView
                android:id="@+id/imgLogOut"
                style="@style/defaultImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@+id/logOutView"
                app:layout_constraintTop_toTopOf="@+id/logOutView"
                app:srcCompat="@drawable/img_app_log_out" />

            <Button
                android:id="@+id/btnLogOut"
                style="@style/basicColorButton"

                android:contentDescription="@string/cdes_logOut"
                android:text="@string/btn_logOut"
                app:layout_constraintBottom_toBottomOf="@+id/logOutView"
                app:layout_constraintEnd_toEndOf="@+id/logOutView"
                app:layout_constraintStart_toStartOf="@+id/logOutView"
                app:layout_constraintTop_toBottomOf="@+id/txvLogOut"
                app:layout_constraintVertical_bias="0.68" />

            <Button
                android:id="@+id/btnSave"
                style="@style/basicColorButton"
                android:contentDescription="@string/cdes_saveProfile"
                android:text="@string/btn_save"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accountSettingsView"
                app:layout_constraintVertical_bias="0.22000003" />

            <Button
                android:id="@+id/btnCancel"
                style="@style/transparentButton"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/cdes_cancelEditProfile"
                android:text="@string/btn_cancel"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSave" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
